# home-service-member

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  dependencies.py  docker-compose.yaml  exceptions.py  home-docs  main.py  pyproject.toml  test_full_flow.py  test_profile_update.py  test_relationship.py
.github/workflows/: Lark_Notification.yml  deploy.yml  docker-build.yml
admin_frontend/: .env.local  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  app.py  requirements.txt
admin_frontend/.streamlit/: CLAUDE.md  config.toml  style.css
admin_frontend/pages/: 01_대시보드.py  02_승인_대기.py  03_회원_관리.py  CLAUDE.md
admin_frontend/react-admin/: package-lock.json  package.json
admin_frontend/utils/: CLAUDE.md  api.py  css.py  totp.py
alembic/: env.py
alembic/versions/: c64b54e792b0_initial_schema.py  c64b54e792b1_update_status_to_unverified_pending_.py  c64b54e792b2_convert_status_to_uppercase.py
docs/: API_GUIDE.md  EXAMPLE_REQUESTS.md
models/: link.py  member.py  skill.py
repositories/: member_repository.py
routers/: auth.py  members.py
schemas/: member.py
services/: email_service.py  email_service_impl.py  file_validation_service.py  member_service.py  storage_service.py  storage_service_impl.py
templates/email/: approval.html  base.html  magic_link.html  rejection.html
tests/: conftest.py  test_main.py
user_frontend/: app.py  requirements.txt
user_frontend/pages/: 01_회원가입.py  02_프로필_수정.py
user_frontend/utils/: api.py
utils/: email.py  jinja2.py  token.py
